feat : 로깅 내역 추가